--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="https://backend-notion-clone.herokuapp.com/{{token}}" method="post">
+    <form action="https://backend-notion-clone.herokuapp.com/reset-password/{{token}}" method="post">
         <p>Enter new password: <input name="password" type="password" required="required" /></p>
         <button type="submit">submit</button>
     </form>
